--- a/src/index.css
+++ b/src/index.css
@@ -149,23 +149,23 @@ body {
       @apply absolute z-50 bottom-40 lg:bottom-40 2xl:bottom-52 left-1/2 -translate-x-1/2;
 
       .info {
-        @apply text-xs text-white bg-black/20 px-2 py-1 rounded-lg;
+        @apply text-xs text-white bg-black/20 rounded-lg pt-1;
       }
 
       .color-control {
-        @apply flex-between bg-neutral-800 rounded-full px-6 py-3 gap-4;
+        @apply flex-between bg-neutral-800 rounded-full px-3 py-2.5 gap-3.5;
 
         div {
           @apply size-7 rounded-full cursor-pointer;
         }
 
         .active {
-          @apply ring-5 size-5 ring-light-100;
+          @apply ring-5 size-5 ring-light-100/50;
         }
       }
 
       .size-control {
-        @apply small-medium flex-between bg-neutral-800 rounded-full px-6 py-2.5 gap-2;
+        @apply small-medium flex-between bg-neutral-800 rounded-full px-2 py-2 gap-1;
 
         div {
           @apply size-8 rounded-full cursor-pointer bg-white text-black flex-center;
